# Data_analysis_agent

./: .env.example  .gitignore  Dockerfile  README.md  app.py  compose.yaml  pyproject.toml  requirements.txt
data/: football.csv
notebooks/: 01-test-components.ipynb  02-analysis-agent-workflow-v1.ipynb  04-analysis-agent-with-report.ipynb
src/agents/: __init__.py  chart_query_agent.py  code_agent.py  data_query_agent.py  report_agent.py  summarization_agent.py
src/config/: db.py
src/nodes/: __init__.py  chart_node.py  data_query_node.py  grade_user_query.py  grade_visualization_requirement.py  report_node.py  summarization_node.py  transform_query.py
src/tools/: __init__.py  decide_to_continue.py  decide_to_report.py  decide_to_visualize.py  generate.py  query_rewriter.py  summary.py  user_query_grader.py  visualization_requirement_grader.py
src/utils/: app_handlers.py  graph.py  llm.py  models.py  prompts.py
test/: test_results.xlsx
